--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
         "default_icon": "icon128.png",
         "default_popup": "popup.html"
     },
-    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+    "content_security_policy": "script-src 'self' https://ssl.google-analytics.com https://firechatext.firebaseio.com https://s-dal5-nss-4.firebaseio.com; object-src 'self'",
     "background": {
         "page": "background.html"
     },
